--- a/Movue/Supporting Files/Info.plist
+++ b/Movue/Supporting Files/Info.plist
@@ -74,6 +74,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-	<string>light</string>
+	<string>Light</string>
 </dict>
 </plist>
